// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonElements/Styled ActiveButtonStyle snapshot by default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  font-family: 'Trade Gothic Bold Condensed',Arial,sans-serif;
  font-size: 14px;
  line-height: 1;
  border: none;
  border-radius: 20px;
  text-transform: uppercase;
  padding: 12px 25px 8px;
  color: rgb(255,255,255);
  background-color: rgb(222,26,66);
}

.c0 svg {
  fill: rgb(255,255,255);
}

.c0:disabled {
  color: rgb(74,74,74);
  background-color: rgb(229,229,229);
}

.c0:disabled svg {
  fill: rgb(74,74,74);
}

@media (min-width:767px) {
  .c0 {
    font-size: 16px;
    padding: 13px 25px 10px;
  }
}

@media (min-width:1140px) {
  .c0 {
    font-size: 18px;
  }
}

<button
  className="hs2zb-2 c0"
/>
`;

exports[`ButtonElements/Styled ButtonSmallWrapperStyle snapshot by default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 10px 0;
  max-width: 410px;
}

@media (min-width:767px) {
  .c0 {
    -webkit-flex-flow: row;
    -ms-flex-flow: row;
    flex-flow: row;
    margin: 20px 0;
  }
}

<div
  className="hs2zb-0 c0"
/>
`;

exports[`ButtonElements/Styled ButtonsWrapperStyle snapshot by default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 10px 0;
}

@media (min-width:767px) {
  .c0 {
    -webkit-flex-flow: row;
    -ms-flex-flow: row;
    flex-flow: row;
    margin: 20px 0;
  }
}

<div
  className="c0"
/>
`;

exports[`ButtonElements/Styled CloseButtonStyle snapshot by default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0;
  border: none;
  background-color: transparent;
  position: absolute;
  top: 20px;
  right: 20px;
  fill: rgb(222,26,66);
  z-index: 1;
  font-size: 16px;
}

@media (min-width:767px) {
  .c0 {
    top: 30px;
    right: 30px;
  }
}

<button
  className="hs2zb-1 c0"
/>
`;

exports[`ButtonElements/Styled EmailButtonStyle snapshot by default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  font-family: 'Trade Gothic Bold Condensed',Arial,sans-serif;
  font-size: 14px;
  line-height: 1;
  border: none;
  border-radius: 20px;
  text-transform: uppercase;
  padding: 12px 25px 8px;
  color: rgb(255,255,255);
  background-color: rgb(222,26,66);
  width: 100%;
  margin: 0 5px;
  padding: 5px 15px;
  color: rgb(255,255,255);
  margin-top: 10px;
  background-color: rgb(222,26,66);
}

.c0 svg {
  fill: rgb(255,255,255);
}

.c0:disabled {
  color: rgb(74,74,74);
  background-color: rgb(229,229,229);
}

.c0:disabled svg {
  fill: rgb(74,74,74);
}

.c0 svg {
  fill: rgb(255,255,255);
}

@media (min-width:767px) {
  .c0 {
    font-size: 16px;
    padding: 13px 25px 10px;
  }
}

@media (min-width:1140px) {
  .c0 {
    font-size: 18px;
  }
}

@media (min-width:767px) {
  .c0 {
    padding: 10px 20px;
  }
}

@media (min-width:767px) {
  .c0 {
    margin-top: 0;
  }
}

<button
  className="hs2zb-2 hs2zb-7 hs2zb-9 c0"
/>
`;

exports[`ButtonElements/Styled FacebookButtonStyle snapshot by default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  font-family: 'Trade Gothic Bold Condensed',Arial,sans-serif;
  font-size: 14px;
  line-height: 1;
  border: none;
  border-radius: 20px;
  text-transform: uppercase;
  padding: 12px 25px 8px;
  color: rgb(255,255,255);
  background-color: rgb(222,26,66);
  width: 100%;
  margin: 0 5px;
  padding: 5px 15px;
  color: rgb(255,255,255);
  background-color: rgb(58,89,152);
}

.c0 svg {
  fill: rgb(255,255,255);
}

.c0:disabled {
  color: rgb(74,74,74);
  background-color: rgb(229,229,229);
}

.c0:disabled svg {
  fill: rgb(74,74,74);
}

.c0 svg {
  fill: rgb(255,255,255);
}

@media (min-width:767px) {
  .c0 {
    font-size: 16px;
    padding: 13px 25px 10px;
  }
}

@media (min-width:1140px) {
  .c0 {
    font-size: 18px;
  }
}

@media (min-width:767px) {
  .c0 {
    padding: 10px 20px;
  }
}

<button
  className="hs2zb-2 hs2zb-7 hs2zb-9 c0"
/>
`;

exports[`ButtonElements/Styled GoogleButtonStyle snapshot by default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  font-family: 'Trade Gothic Bold Condensed',Arial,sans-serif;
  font-size: 14px;
  line-height: 1;
  border: none;
  border-radius: 20px;
  text-transform: uppercase;
  padding: 12px 25px 8px;
  color: rgb(255,255,255);
  background-color: rgb(222,26,66);
  width: 100%;
  margin: 0 5px;
  padding: 5px 15px;
  color: rgb(255,255,255);
  margin-top: 10px;
  background-color: rgb(216,58,44);
}

.c0 svg {
  fill: rgb(255,255,255);
}

.c0:disabled {
  color: rgb(74,74,74);
  background-color: rgb(229,229,229);
}

.c0:disabled svg {
  fill: rgb(74,74,74);
}

.c0 svg {
  fill: rgb(255,255,255);
}

@media (min-width:767px) {
  .c0 {
    font-size: 16px;
    padding: 13px 25px 10px;
  }
}

@media (min-width:1140px) {
  .c0 {
    font-size: 18px;
  }
}

@media (min-width:767px) {
  .c0 {
    padding: 10px 20px;
  }
}

@media (min-width:767px) {
  .c0 {
    margin-top: 0;
  }
}

<button
  className="hs2zb-2 hs2zb-7 hs2zb-9 c0"
/>
`;

exports[`ButtonElements/Styled GreyButtonStyle snapshot by default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  font-family: 'Trade Gothic Bold Condensed',Arial,sans-serif;
  font-size: 14px;
  line-height: 1;
  border: none;
  border-radius: 20px;
  text-transform: uppercase;
  padding: 12px 25px 8px;
  color: rgb(74,74,74);
  background-color: rgb(229,229,229);
}

.c0 svg {
  fill: rgb(222,26,66);
}

.c0:hover,
.c0:focus {
  color: rgb(74,74,74);
}

@media (min-width:767px) {
  .c0 {
    font-size: 16px;
    padding: 13px 25px 10px;
  }
}

@media (min-width:1140px) {
  .c0 {
    font-size: 18px;
  }
}

<button
  className="hs2zb-2 c0"
/>
`;

exports[`ButtonElements/Styled IconWrapperStyle snapshot by default 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  font-size: 12px;
  margin-right: 5px;
}

.c0 svg {
  width: 12px;
  height: 12px;
}

@media (min-width:1140px) {
  .c0 svg {
    width: 14px;
    height: 14px;
  }
}

<span
  className="c0"
/>
`;

exports[`ButtonElements/Styled RedButtonStyle snapshot by default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  font-family: 'Trade Gothic Bold Condensed',Arial,sans-serif;
  font-size: 14px;
  line-height: 1;
  border: none;
  border-radius: 20px;
  text-transform: uppercase;
  padding: 12px 25px 8px;
  color: rgb(255,255,255);
  background-color: rgb(222,26,66);
}

.c0 svg {
  fill: rgb(255,255,255);
}

@media (min-width:767px) {
  .c0 {
    font-size: 16px;
    padding: 13px 25px 10px;
  }
}

@media (min-width:1140px) {
  .c0 {
    font-size: 18px;
  }
}

<button
  className="hs2zb-2 c0"
/>
`;

exports[`ButtonElements/Styled RedLinkButtonStyle snapshot by default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0;
  border: none;
  background-color: transparent;
  display: inline-block;
  color: rgb(222,26,66);
  -webkit-text-decoration: underline;
  text-decoration: underline;
  margin: 0 5px;
}

<button
  className="hs2zb-1 c0"
/>
`;

exports[`ButtonElements/Styled SmallGreyButtonStyle snapshot by default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  font-family: 'Trade Gothic Bold Condensed',Arial,sans-serif;
  font-size: 14px;
  line-height: 1;
  border: none;
  border-radius: 20px;
  text-transform: uppercase;
  padding: 12px 25px 8px;
  color: rgb(74,74,74);
  background-color: rgb(229,229,229);
  padding: 5px 15px 2.5px;
}

.c0 svg {
  fill: rgb(222,26,66);
}

.c0:hover,
.c0:focus {
  color: rgb(74,74,74);
}

@media (min-width:767px) {
  .c0 {
    font-size: 16px;
    padding: 13px 25px 10px;
  }
}

@media (min-width:1140px) {
  .c0 {
    font-size: 18px;
  }
}

@media (min-width:767px) {
  .c0 {
    padding: 10px 20px;
  }
}

<button
  className="hs2zb-2 hs2zb-4 c0"
/>
`;

exports[`ButtonElements/Styled SmallRedButtonStyle snapshot by default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  font-family: 'Trade Gothic Bold Condensed',Arial,sans-serif;
  font-size: 14px;
  line-height: 1;
  border: none;
  border-radius: 20px;
  text-transform: uppercase;
  padding: 12px 25px 8px;
  color: rgb(255,255,255);
  background-color: rgb(222,26,66);
  padding: 5px 15px 2.5px;
}

.c0 svg {
  fill: rgb(255,255,255);
}

@media (min-width:767px) {
  .c0 {
    font-size: 16px;
    padding: 13px 25px 10px;
  }
}

@media (min-width:1140px) {
  .c0 {
    font-size: 18px;
  }
}

@media (min-width:767px) {
  .c0 {
    padding: 10px 20px;
  }
}

<button
  className="hs2zb-2 hs2zb-3 c0"
/>
`;

exports[`ButtonElements/Styled UnstyledButtonStyle snapshot by default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0;
  border: none;
  background-color: transparent;
}

<button
  className="c0"
/>
`;
